--- a/Unit 4 Case Study/SBhattacharyyaDFreemanTMcWilliams_Unit4CaseStudy.ipynb
+++ b/Unit 4 Case Study/SBhattacharyyaDFreemanTMcWilliams_Unit4CaseStudy.ipynb
@@ -7,7 +7,7 @@
     "# Unit 4 Case Study:   Future Contract Rolling\n",
     "### Authors:  Sudip Bhattacharyya, Dan Freeman and Timothy McWilliams\n",
     "\n",
-    "### Date: 5-Jun-2018"
+    "### Date: June 5, 2018"
    ]
   },
   {
@@ -66,7 +66,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -100,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -720,7 +724,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1037,7 +1043,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1189,7 +1197,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1220,7 +1230,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1251,7 +1263,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1296,7 +1310,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ge_close = ge_raw['Close']\n",
@@ -1307,7 +1323,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1333,7 +1351,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1359,7 +1379,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1385,7 +1407,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1419,7 +1443,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "np.random.seed(111111)\n",
@@ -1436,7 +1462,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "walk = (np.random.randint(0, 200, size=N) - 100) * 0.25\n",
@@ -1454,7 +1482,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rng_ge = pd.date_range(ge_close.index[0], periods=len(ge_close) + N, freq='B')\n",
@@ -1472,7 +1502,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "near_ge = np.concatenate([ge_close.values, ge_close.values[-1] + walk])\n",
@@ -1498,7 +1530,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1522,7 +1556,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1546,7 +1582,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1577,7 +1615,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_roll_weights(start, expiry, items, roll_periods=5):\n",
@@ -1622,7 +1662,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1660,7 +1702,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1680,7 +1724,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1719,7 +1765,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1739,7 +1787,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1777,7 +1827,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1811,7 +1863,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ge_rets = ge_close.pct_change()\n",
@@ -1829,7 +1883,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1872,7 +1928,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1913,7 +1971,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1964,20 +2024,7 @@
    "source": [
     "Our results show that the mean rolled returns for Pepsi (-0.11), GE (-0.09) and IBM (0.14) are around zero. This indicates that future contract rolling is not effective for simulating the future stock closing prices for each company. The one-year moving correlation varies between 0.7 (semi-strong correlation) and -0.1 (no correlation).\n",
     "\n",
-    "\n",
-    "\n",
-    "future work:\n",
-    "\n",
-    "- other data simulaitons\n",
-    "- other methods of weight the future contracts \n",
-    "- A simple deep learning model for stock price prediction using TensorFlow\n",
-    "https://medium.com/mlreview/a-simple-deep-learning-model-for-stock-price-prediction-using-tensorflow-30505541d877\n",
-    "- \"Berkly\" \n",
-    "https://www.econ.berkeley.edu/sites/default/files/Selene%20Yue%20Xu.pdf\n",
-    "\n",
-    "\n",
-    "\n",
-    "One area of future work is to capture the volatilty between assets. While correlation captures the relationship between the change in one stock and the change in another stock, it fails to take into account the volatily of these assets [3]. Ordinary least squares regression can be used to capture such a dynamic relationship. "
+    "In our analysis, we only consider technical data, which are historical patterns of a stock's price movement, in prediciting the price of a stock in the future. One possible enhancement to our method is to account for the volatilty of stocks in predicting their future closing prices. This can be done by considering a stock's fundamental data, that is, pieces of information such as press releases or news articles that directly affect the underlying value of the stock. Selene Yue Xu at the University of California, Berkeley uses news information obtained from Yahoo! Finance and online search data from Google Trends as predictors in an ARIMA time series model to improve the accuracy of stock price forecasts for Apple [4]. A similar analysis can be performed in the context of future contract rolling in order to improve upon the results we obtained here."
    ]
   },
   {
@@ -1993,28 +2040,29 @@
    "source": [
     "1. Investopedia.com.\"Futures Contract\", https://www.investopedia.com/terms/f/futurescontract.asp\n",
     "2. Forex Capital Markets.\"What Is Rollover In Futures Trading?\", https://www.fxcm.com/insights/what-is-rollover-in-futures-trading/\n",
-    "3. McKinney, W. (2012). Python for Data Analysis (First ed.). OReilly."
+    "3. McKinney, W. (2012). Python for Data Analysis (First ed.). OReilly.\n",
+    "4. Xu, S. Y. \"Stock Price Forecasting Using Information from Yahoo Finance and Google Trend\" UC Berkeley, https://www.econ.berkeley.edu/sites/default/files/Selene%20Yue%20Xu.pdf"
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
