Final cleaned-up code

--- a/Unit 12 Case Study/Code/SBhattacharyyaDFreemanTMcWilliams_Unit12CaseStudy.ipynb
+++ b/Unit 12 Case Study/Code/SBhattacharyyaDFreemanTMcWilliams_Unit12CaseStudy.ipynb
@@ -322,6 +322,7 @@
     }
    ],
    "source": [
+    "#Horizontal graph\n",
     "set.seed(seed1)\n",
     "g = familyTree(lambda = 0.4, kappa = 1, maxGen = 10)\n",
     "\n",
@@ -594,6 +595,7 @@
     }
    ],
    "source": [
+    "#Vertical graph\n",
     "seed1 = 12062013\n",
     "set.seed(seed1)\n",
     "g = familyTree(lambda = 0.4, kappa = 1, maxGen = 10)\n",
