--- a/Unit 12 Case Study/Code/SBhattacharyyaDFreemanTMcWilliams_Unit12CaseStudy.ipynb
+++ b/Unit 12 Case Study/Code/SBhattacharyyaDFreemanTMcWilliams_Unit12CaseStudy.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genKidsV = function(bTimes, cTimes, parentID, lambda = 0.5, kappa = 0.3) {\n",
+    "genKids = function(bTimes, cTimes, parentID, lambda = 0.5, kappa = 0.3) {\n",
     "       # Determine how many children each job has\n",
     "  parentAge = cTimes - bTimes\n",
     "  numKids = rpois(n = length(parentAge), lambda = lambda * parentAge)\n",
@@ -35,6 +35,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>parentID</th><th scope=col>kidID</th><th scope=col>births</th><th scope=col>completes</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>NA       </td><td>1        </td><td>0.1141938</td><td>14.9441  </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|llll}\n",
+       " parentID & kidID & births & completes\\\\\n",
+       "\\hline\n",
+       "\t NA        & 1         & 0.1141938 & 14.9441  \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "parentID | kidID | births | completes | \n",
+       "|---|\n",
+       "| NA        | 1         | 0.1141938 | 14.9441   | \n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  parentID kidID births    completes\n",
+       "1 NA       1     0.1141938 14.9441  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "genKids(0, 1, NA, 0.5, 0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -50,7 +93,7 @@
     "  \n",
     "  # Generate future generations, one at a time.\n",
     "  for (i in 2:maxGen) {\n",
-    "    nextGen = genKidsV(bTimes = allGens[[ (i - 1) ]]$births,\n",
+    "    nextGen = genKids(bTimes = allGens[[ (i - 1) ]]$births,\n",
     "                       cTimes = allGens[[ (i - 1) ]]$completes,\n",
     "                       parentID = allGens[[ (i - 1) ]]$kidID,\n",
     "                       lambda = lambda, kappa = kappa)\n",
@@ -60,6 +103,159 @@
     "  \n",
     "  return(allGens)\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol>\n",
+       "\t<li><table>\n",
+       "<thead><tr><th scope=col>parentID</th><th scope=col>kidID</th><th scope=col>births</th><th scope=col>completes</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>NA      </td><td>1       </td><td>0       </td><td>7.730216</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n",
+       "</li>\n",
+       "\t<li><table>\n",
+       "<thead><tr><th scope=col>parentID</th><th scope=col>kidID</th><th scope=col>births</th><th scope=col>completes</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1        </td><td>1        </td><td>1.630282 </td><td>10.659611</td></tr>\n",
+       "\t<tr><td>1        </td><td>2        </td><td>4.801337 </td><td>11.583503</td></tr>\n",
+       "\t<tr><td>1        </td><td>3        </td><td>5.304041 </td><td> 9.519773</td></tr>\n",
+       "\t<tr><td>1        </td><td>4        </td><td>6.340001 </td><td>13.879598</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n",
+       "</li>\n",
+       "\t<li><table>\n",
+       "<thead><tr><th scope=col>parentID</th><th scope=col>kidID</th><th scope=col>births</th><th scope=col>completes</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1       </td><td> 1      </td><td>3.114654</td><td>10.87029</td></tr>\n",
+       "\t<tr><td>1       </td><td> 2      </td><td>5.266424</td><td>11.75423</td></tr>\n",
+       "\t<tr><td>1       </td><td> 3      </td><td>5.477547</td><td>19.01639</td></tr>\n",
+       "\t<tr><td>1       </td><td> 4      </td><td>6.235651</td><td>14.72795</td></tr>\n",
+       "\t<tr><td>1       </td><td> 5      </td><td>6.322852</td><td>11.85526</td></tr>\n",
+       "\t<tr><td>1       </td><td> 6      </td><td>8.734475</td><td>11.59822</td></tr>\n",
+       "\t<tr><td>1       </td><td> 7      </td><td>9.859066</td><td>10.68623</td></tr>\n",
+       "\t<tr><td>2       </td><td> 8      </td><td>8.024070</td><td>12.02093</td></tr>\n",
+       "\t<tr><td>3       </td><td> 9      </td><td>6.530571</td><td>11.14012</td></tr>\n",
+       "\t<tr><td>3       </td><td>10      </td><td>7.331530</td><td>10.22969</td></tr>\n",
+       "\t<tr><td>3       </td><td>11      </td><td>8.639740</td><td>10.73554</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n",
+       "</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate}\n",
+       "\\item \\begin{tabular}{r|llll}\n",
+       " parentID & kidID & births & completes\\\\\n",
+       "\\hline\n",
+       "\t NA       & 1        & 0        & 7.730216\\\\\n",
+       "\\end{tabular}\n",
+       "\n",
+       "\\item \\begin{tabular}{r|llll}\n",
+       " parentID & kidID & births & completes\\\\\n",
+       "\\hline\n",
+       "\t 1         & 1         & 1.630282  & 10.659611\\\\\n",
+       "\t 1         & 2         & 4.801337  & 11.583503\\\\\n",
+       "\t 1         & 3         & 5.304041  &  9.519773\\\\\n",
+       "\t 1         & 4         & 6.340001  & 13.879598\\\\\n",
+       "\\end{tabular}\n",
+       "\n",
+       "\\item \\begin{tabular}{r|llll}\n",
+       " parentID & kidID & births & completes\\\\\n",
+       "\\hline\n",
+       "\t 1        &  1       & 3.114654 & 10.87029\\\\\n",
+       "\t 1        &  2       & 5.266424 & 11.75423\\\\\n",
+       "\t 1        &  3       & 5.477547 & 19.01639\\\\\n",
+       "\t 1        &  4       & 6.235651 & 14.72795\\\\\n",
+       "\t 1        &  5       & 6.322852 & 11.85526\\\\\n",
+       "\t 1        &  6       & 8.734475 & 11.59822\\\\\n",
+       "\t 1        &  7       & 9.859066 & 10.68623\\\\\n",
+       "\t 2        &  8       & 8.024070 & 12.02093\\\\\n",
+       "\t 3        &  9       & 6.530571 & 11.14012\\\\\n",
+       "\t 3        & 10       & 7.331530 & 10.22969\\\\\n",
+       "\t 3        & 11       & 8.639740 & 10.73554\\\\\n",
+       "\\end{tabular}\n",
+       "\n",
+       "\\end{enumerate}\n"
+      ],
+      "text/markdown": [
+       "1. \n",
+       "parentID | kidID | births | completes | \n",
+       "|---|\n",
+       "| NA       | 1        | 0        | 7.730216 | \n",
+       "\n",
+       "\n",
+       "\n",
+       "2. \n",
+       "parentID | kidID | births | completes | \n",
+       "|---|---|---|---|\n",
+       "| 1         | 1         | 1.630282  | 10.659611 | \n",
+       "| 1         | 2         | 4.801337  | 11.583503 | \n",
+       "| 1         | 3         | 5.304041  |  9.519773 | \n",
+       "| 1         | 4         | 6.340001  | 13.879598 | \n",
+       "\n",
+       "\n",
+       "\n",
+       "3. \n",
+       "parentID | kidID | births | completes | \n",
+       "|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 1        |  1       | 3.114654 | 10.87029 | \n",
+       "| 1        |  2       | 5.266424 | 11.75423 | \n",
+       "| 1        |  3       | 5.477547 | 19.01639 | \n",
+       "| 1        |  4       | 6.235651 | 14.72795 | \n",
+       "| 1        |  5       | 6.322852 | 11.85526 | \n",
+       "| 1        |  6       | 8.734475 | 11.59822 | \n",
+       "| 1        |  7       | 9.859066 | 10.68623 | \n",
+       "| 2        |  8       | 8.024070 | 12.02093 | \n",
+       "| 3        |  9       | 6.530571 | 11.14012 | \n",
+       "| 3        | 10       | 7.331530 | 10.22969 | \n",
+       "| 3        | 11       | 8.639740 | 10.73554 | \n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[[1]]\n",
+       "  parentID kidID births completes\n",
+       "1       NA     1      0  7.730216\n",
+       "\n",
+       "[[2]]\n",
+       "  parentID kidID   births completes\n",
+       "1        1     1 1.630282 10.659611\n",
+       "2        1     2 4.801337 11.583503\n",
+       "3        1     3 5.304041  9.519773\n",
+       "4        1     4 6.340001 13.879598\n",
+       "\n",
+       "[[3]]\n",
+       "   parentID kidID   births completes\n",
+       "1         1     1 3.114654  10.87029\n",
+       "2         1     2 5.266424  11.75423\n",
+       "3         1     3 5.477547  19.01639\n",
+       "4         1     4 6.235651  14.72795\n",
+       "5         1     5 6.322852  11.85526\n",
+       "6         1     6 8.734475  11.59822\n",
+       "7         1     7 9.859066  10.68623\n",
+       "8         2     8 8.024070  12.02093\n",
+       "9         3     9 6.530571  11.14012\n",
+       "10        3    10 7.331530  10.22969\n",
+       "11        3    11 8.639740  10.73554\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "familyTree(0.5, 0.3, 3)"
    ]
   },
   {
@@ -322,7 +518,6 @@
     }
    ],
    "source": [
-    "#Horizontal graph\n",
     "set.seed(seed1)\n",
     "g = familyTree(lambda = 0.4, kappa = 1, maxGen = 10)\n",
     "\n",
@@ -595,7 +790,6 @@
     }
    ],
    "source": [
-    "#Vertical graph\n",
     "seed1 = 12062013\n",
     "set.seed(seed1)\n",
     "g = familyTree(lambda = 0.4, kappa = 1, maxGen = 10)\n",
@@ -644,7 +838,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "R 3.4",
+   "display_name": "R",
    "language": "R",
    "name": "ir"
   },
@@ -654,7 +848,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.4.1"
+   "version": "3.3.2"
   }
  },
  "nbformat": 4,
